Changing texture field strength is sometimes needed to apply prior texture changes #85139

Closed
opened 2021-01-28 05:50:54 +01:00 by Aaron Fjerstad · 4 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash: 5be9ef4177

I'm not sure when the last time it worked was, but I know it was broken in 2.91.0 as well.

Short description of error
Sometimes you must modify the strength of a texture field to apply prior changes to the texture type.

Exact steps for others to reproduce the error
deps_graph_bug.blend

  • Open the blend file. You will see 100,000 vertices each with a hair, and a texture field. DON'T MODIFY THE LAYOUT
  • In the lower right panel, the texture type starts out as "Image or Movie".
  • Change the texture type to "Clouds".
  • Take note that the hair doesn't update yet.
  • In the texture field panel just above, change "Strength" from 1.000 to 0.900.

OUTCOME
Only after changing the "Strength" does the hair update to use "Clouds". Changing the texture to "Clouds" does not update the hair.

EXPECTED
The hair should respond to changes in the texture type without modifying the "Strength" to trigger it.

IMPACT
Working with texture fields lacks some of the fluidity of other force fields, and has high potential for confusing users.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash: `5be9ef4177` I'm not sure when the last time it worked was, but I know it was broken in 2.91.0 as well. **Short description of error** Sometimes you must modify the strength of a texture field to apply prior changes to the texture type. **Exact steps for others to reproduce the error** [deps_graph_bug.blend](https://archive.blender.org/developer/F9601974/deps_graph_bug.blend) - Open the blend file. You will see 100,000 vertices each with a hair, and a texture field. DON'T MODIFY THE LAYOUT - In the lower right panel, the texture type starts out as "Image or Movie". - Change the texture type to "Clouds". - Take note that the hair doesn't update yet. - In the texture field panel just above, change "Strength" from 1.000 to 0.900. **OUTCOME** Only after changing the "Strength" does the hair update to use "Clouds". Changing the texture to "Clouds" does not update the hair. **EXPECTED** The hair should respond to changes in the texture type without modifying the "Strength" to trigger it. **IMPACT** Working with texture fields lacks some of the fluidity of other force fields, and has high potential for confusing users.
Author

Added subscriber: @AaronFjerstad

Added subscriber: @AaronFjerstad
Aaron Fjerstad changed title from Changing texture field strength sometimes needed to apply prior texture changes to Changing texture field strength is sometimes needed to apply prior texture changes 2021-01-28 05:52:38 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-01-28 09:15:35 +01:00

This issue was referenced by 3fb5e83867

This issue was referenced by 3fb5e838677d8db0c193da1a7c70cb5c392a4610
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85139
No description provided.